<resources>
    <string name="app_name">Fingerprint Capture</string>
    <string name="lable_name">USBCamera</string>
    <string name="action_about">About</string>
    <string name="action_usbinfo">USB Info</string>
    <string name="diag_about_title">About</string>
    <string name="diag_about_message">This is USBCamera APP.</string>
    <string name='diag_usbinfo_title'>USB Info</string>
    <string name="diag_title">Message</string>
    <string name="diag_positive_button">Yes</string>
    <string name="diag_negative_button">No</string>
    <string name="diag_cancel_button">Cancel</string>
    <string name="diag_to_face_button">Continue to gather photo?</string>
    <string name="diag_save_success">Save Success</string>
    <string name="diag_delete_photo">Do you want to delete this photo?</string>
    <string name="diag_save_photo">Do you want to save this photo?</string>
    <string name="msg_permissiondeny">Get permission failed, exiting...</string>
    <string name="acra_notification_text">Sorry, the application crashed. Please send the report to the developer.</string>
    <string name="acra_notification_title">USB Camera Crash</string>
    <string name="acra_notification_channel">ACRA</string>
    <string name="fab_front_right">Front to Right</string>
    <string name="fab_front_left">Front to Left</string>
    <string name="fab_front_down">Front to Down</string>
    <string name="fab_front_up">Front to Up</string>
    <string name="fab_back_right">Back to Right</string>
    <string name="fab_back_left">Back to Left</string>
    <string name="fab_back_down">Back to Down</string>
    <string name="fab_back_up">Back to Up</string>

    <string name="exit">Exit</string>
    <string name="finger_flat">Flat-finger</string>
    <string name="finger_roll">Roll-finger</string>
    <string name="finger_r_thumb">Right-thumb</string>
    <string name="finger_r_index">Right-index</string>
    <string name="finger_r_middle">Right-middle</string>
    <string name="finger_r_ring">Right-ring</string>
    <string name="finger_r_little">Right-little</string>
    <string name="finger_l_thumb">Left-thumb</string>
    <string name="finger_l_index">Left-index</string>
    <string name="finger_l_middle">Left-middle</string>
    <string name="finger_l_ring">Left-ring</string>
    <string name="finger_l_little">Left-little</string>
    <string name="current_finger_pos">Current Finger pos： </string>
    <string name="finger_status_init">Init Status： </string>
    <string name="start_collect">Start Gather</string>
    <string name="stop_collect">Stop Gather</string>
    <string name="start_preview">Start Preview</string>
    <string name="stop_preview">Stop Preview</string>
<!--    <string name="save_preview_img">save preview image</string>-->
    <string name="please_select_finger">Please Select Finger</string>
    <string name="collecting">Gathering</string>
    <string name="tv_contrast">Match</string>
    <string name="tv_light">Light</string>
    <string name="tv_dry_finger">Dry</string>
    <string name="tv_gain">GAIN</string>
    <string name="tv_wet_finger">Wet</string>
    <string name="tv_exp">EXP</string>
    <string name="tv_save">save</string>
    <string name="btn_dry">dry</string>
    <string name="btn_wet">Set</string>
    <string name="tv_setting">Setting</string>
    <string name="finger_opening">Opening...</string>
    <string name="finger_closeing">Closeing...</string>
    <string name="save_finger_dry">Dry Saved</string>
    <string name="save_finger_wet">Wet Saved</string>
    <string name="dry_wet_setting">Dry Wet Setting</string>
    <string name="model_normal">Normal</string>
    <string name="model_dry">Dry</string>
    <string name="model_wet">Wet</string>

    <string name="save_portrait">Save Face</string>

    <string name="id_card_read">IDCard Read</string>
    <string name="id_card_name">Name：</string>
    <string name="id_card_phone">Phone</string>
    <string name="id_card_num">IDCard：</string>
    <string name="id_card_gender">Gender：</string>
    <string name="id_card_ethnic">Ethnic：</string>
    <string name="id_card_birthday">Birthday：</string>
    <string name="id_card_born">Born：</string>
    <string name="id_card_address">Address：</string>
    <string name="id_card_dept">Dept：</string>
    <string name="id_card_date">Date：</string>
    <string name="id_card_finger">Finger Info：</string>
    <string name="id_card_finger_result">Finger match result：</string>
    <string name="id_card_person_photo_result">Face match result：</string>
    <string name="id_card_detail">Description...</string>
    <string name="id_card_check">Please place your finger！</string>
    <string name="id_card_fail">Verify Failed, Please Recapture!</string>
    <string name="id_card_feature_error">Finger Feature Error</string>
    <string name="id_card_bad_quality">Bad Quality, Please Recapture!</string>
    <string name="id_card_compare_error">Verify Error, Please Recapture!</string>
    <string name="id_card_compare_fail">Verify Failed!</string>
    <string name="id_card_compare_success">Verify Success</string>
    <string name="id_card_error">Error</string>
    <string name="id_card_ready">Please Read IDCard</string>
    <string name="id_card_read_start">Read IDCard</string>
    <string name="id_card_person_validate">Person Verify</string>
    <string name="id_card_photo_validate">Face Verify</string>
    <string name="id_card_compare_detail">View Details</string>
    <string name="id_card_compare_name">Name：</string>
    <string name="id_card_compare_idcard">IDCard：</string>
    <string name="id_card_back">Home Page</string>
    <string name="id_card_save">Save</string>
    <string name="id_card_all_collect_finger">Ten-finger Gather</string>
    <string name="id_card_collect_photo">Face Gather</string>
    <string name="id_card_exit">exit</string>

    <string name="user_login_name">Login Name</string>
    <string name="user_name">Name</string>
    <string name="user_idcardno">IDCard</string>
    <string name="user_phone">Phone Number</string>
    <string name="user_unit_code">Unit Code</string>
    <string name="user_unit_name">Unit Name</string>

    <string name="person_list_name">Name</string>
    <string name="person_list_gender">Gender</string>
    <string name="person_list_ethnic">Nation</string>
    <string name="person_list_idcardno">IDCard</string>
    <string name="person_list_id">Person Id</string>
    <string name="person_list_address">Address</string>
    <string name="person_list_gather_time">Gather Time</string>

    <string name="set_dry_wet_btn">Dry Wet Setting</string>
    <string name="set_preview_btn">Preview</string>
    <string name="set_user_info_btn">User Info</string>
    <string name="set_quality_btn">Quality Limit Setting</string>
    <string name="set_upload_btn">Upload Setting</string>
    <string name="login_btn">Login</string>

    <string name="person_gather_title">Today Gather</string>
    <string name="person_gather_add">Add</string>
    <string name="person_gather_refresh">Refresh</string>
    <string name="person_gather_text">Person Gather</string>
    <string name="person_manager_text">Person Manager</string>
    <string name="person_manager_date">Calendar</string>
    <string name="system_setting_text">Setting</string>

    <string name="upload_url">Upload URL</string>
    <string name="quality_limit">Quality Limit</string>
    <string name="gather_finger">Gather Finger</string>
    <string name="gather_face">Gather Face</string>
    <string name="export_fpt">Export FPT</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="dry">Dry</string>
    <string name="wet">Wet</string>
    <string name="loading">Loading</string>

    <string name="error_msg_101">The finger rolled back</string>
    <string name="error_msg_102">Fuzziness</string>
    <string name="error_msg_103">Too small</string>
    <string name="error_msg_104">Too dry</string>
    <string name="error_msg_105">Too wet</string>
    <string name="error_msg_106">Fuzziness</string>
    <string name="error_msg_107">Core Shifted left</string>
    <string name="error_msg_108">Core Shifted right</string>
    <string name="error_msg_109">Core Shifted up</string>
    <string name="error_msg_110">Core Shifted down</string>
    <string name="error_msg_111">No core</string>
    <string name="error_msg_112">Gravity Shifted left</string>
    <string name="error_msg_113">Gravity Shifted right</string>
    <string name="error_msg_114">Gravity Shifted up</string>
    <string name="error_msg_115">Gravity Shifted down</string>
    <string name="error_msg_116">Flat Not Supported</string>

    <string name="msg_gather_thress_sided_face">Please gather three-sided face data!</string>
</resources>
