<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >
    <TextView
        android:id="@+id/gather_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:padding="5dp"
        android:text="张三（4127221990xxxx）"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/finger_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FF888888"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dip" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/finger_type_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="#777777"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/finger_roll_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/finger_type_background"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:text="@string/finger_roll"
                android:textColor="@color/blue_light"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/finger_flat_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/finger_type_background"
                android:button="@null"
                android:gravity="center"
                android:paddingRight="80dp"
                android:text="@string/finger_flat"
                android:textSize="20sp" />
        </RadioGroup>

        <GridLayout
            android:id="@+id/finger_grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finger_type_group"
            android:background="@color/blue_simple"
            android:columnCount="5"
            android:rowCount="2" >

            <Button
                android:id="@+id/finger_r_thumb_btn"
                style="@style/FingerNameText"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/finger_r_thumb" />

            <Button
                android:id="@+id/finger_r_index_btn"
                style="@style/FingerNameText"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/finger_r_index" />

            <Button
                android:id="@+id/finger_r_middle_btn"
                style="@style/FingerNameText"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/finger_r_middle" />

            <Button
                android:id="@+id/finger_r_ring_bnt"
                style="@style/FingerNameText"
                android:layout_row="0"
                android:layout_column="3"
                android:text="@string/finger_r_ring" />

            <Button
                android:id="@+id/finger_r_little_btn"
                style="@style/FingerNameText"
                android:layout_row="0"
                android:layout_column="4"
                android:text="@string/finger_r_little" />

            <Button
                android:id="@+id/finger_l_thumb_btn"
                style="@style/FingerNameText"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/finger_l_thumb" />

            <Button
                android:id="@+id/finger_l_index_btn"
                style="@style/FingerNameText"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/finger_l_index" />

            <Button
                android:id="@+id/finger_l_middle_btn"
                style="@style/FingerNameText"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/finger_l_middle" />

            <Button
                android:id="@+id/finger_l_ring_btn"
                style="@style/FingerNameText"
                android:layout_row="1"
                android:layout_column="3"
                android:text="@string/finger_l_ring" />

            <Button
                android:id="@+id/finger_l_little_btn"
                style="@style/FingerNameText"
                android:layout_row="1"
                android:layout_column="4"
                android:text="@string/finger_l_little" />

        </GridLayout>

        <TextView
            android:id="@+id/gather_status_tv"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/finger_grid_layout"
            android:background="#3fb1e3"
            android:gravity="left"
            android:padding="5dp"
            android:paddingTop="10dp"
            android:text="@string/finger_status_init"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/gather_model_dry_tv"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/dry"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/gather_model_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/gather_model_wet_tv"
                android:layout_toEndOf="@id/gather_model_dry_tv"
                android:max="3"
                android:progress="2" />

            <TextView
                android:id="@+id/gather_model_wet_tv"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="@string/wet"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/finger_start_gather_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/finger_btn_background"
                android:text="@string/start_collect"
                android:textColor="@drawable/finger_text_color" />

            <Button
                android:id="@+id/finger_save_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/tv_save"
                android:textColor="@drawable/finger_text_color" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>