<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/mosaic_finger_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="1dip" >
<!--        <ImageView-->
<!--            android:id="@+id/finger_imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:scaleType="center"-->
<!--            android:background="@android:color/black"/>-->
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/mosaic_gather_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/start_collect"
                android:textColor="@drawable/finger_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mosaic_preview_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/start_preview"
                android:textColor="@drawable/finger_text_color" />
            <Button
                android:id="@+id/mosaic_save_preview_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/tv_save"
                android:textColor="@drawable/finger_text_color" />

        </LinearLayout>
            <Button
                android:id="@+id/dry_wet_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/dry_wet_setting"
                android:textColor="@drawable/finger_text_color" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>