<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/drywet_exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:background="@drawable/finger_btn_background"
            android:text="@string/exit"
            android:textColor="@drawable/finger_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/drywet_start_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/finger_btn_background"
                android:text="@string/start_collect"
                android:textColor="@drawable/finger_text_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/drywet_dry_save_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/finger_btn_background"
                        android:text="@string/btn_dry"
                        android:textColor="@drawable/finger_text_color" />

                    <TextView
                        android:id="@+id/drywet_dry_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textColor="@color/blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/drywet_wet_save_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/finger_btn_background"
                        android:text="@string/btn_wet"
                        android:textColor="@drawable/finger_text_color" />

                    <TextView
                        android:id="@+id/drywet_wet_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textColor="@color/blue" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp">

                <SeekBar
                    android:id="@+id/drywet_gain_sb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/drywet_gain_percent_tv"
                    android:layout_toEndOf="@id/drywet_gain_tv"
                    android:max="48" />


                <TextView
                    android:id="@+id/drywet_gain_tv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/drywet_gain_percent_tv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:text="50%"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp">

                <SeekBar
                    android:id="@+id/drywet_exp_sb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/drywet_exp_percent_tv"
                    android:layout_toEndOf="@id/drywet_exp_tv"
                    android:max="1050" />

                <TextView
                    android:id="@+id/drywet_exp_tv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/drywet_exp_percent_tv"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:text="50%"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/drywet_gain_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:lines="1"
                android:text="亮度 24，对比度 500"
                android:textSize="24sp" />

            <View
                android:id="@+id/drywet_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/white" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>
